Resolve inset properties to computed style when there is overconstraintment https://bugs.webkit.org/show_bug.cgi?id=188711

Patch by Oriol Brufau <obrufau@igalia.com> on 2018-10-09
Reviewed by Manuel Rego Casasnovas.

This patch makes WebKit behave closer to Blink. Specifically,
 - In overconstrained relative or absolute positioning, inset properties resolve
   to the computed value (absolutizing percentages) instead of to the used value.
 - In fixed positioning, the resolved value of non-'auto' values is no longer
   increased by the border of the containg block.

LayoutTests/imported/w3c:

Some tests still have failures due to
 - https://bugs.webkit.org/show_bug.cgi?id=189513
 - https://bugs.webkit.org/show_bug.cgi?id=189518
 - https://bugs.webkit.org/show_bug.cgi?id=189549

This patch can slighlty alter the resolved value if it's a long decimal number,
that's why test expectations for the timing functions test changed.

* web-platform-tests/css-timing-1/cubic-bezier-timing-functions-output-expected.txt:
* web-platform-tests/css/cssom/getComputedStyle-insets-absolute-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-absolute.html: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-fixed-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-fixed.html: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-nobox-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-nobox.html: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-relative-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-relative.html: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-static-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-static.html: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-sticky-expected.txt: Added.
* web-platform-tests/css/cssom/getComputedStyle-insets-sticky.html: Added.
* web-platform-tests/css/cssom/support/getComputedStyle-insets.js: Added.
(serialize):
(wmName):
(checkStyle):
(runTestsWithWM):
(export.runTests):

Source/WebCore:

This patch can slighlty alter the resolved value if it's a long decimal number.

Tests: imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-absolute.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-fixed.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-nobox.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-relative.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-static.html
       imported/w3c/web-platform-tests/css/cssom/getComputedStyle-insets-sticky.html

* css/CSSComputedStyleDeclaration.cpp:
(WebCore::positionOffsetValue):
* rendering/RenderBox.h:

Canonical link: https://commits.webkit.org/205360@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236979 268f45cc-cd09-0410-ab3c-d52691b4dbfc